<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7F7FD5"
    android:padding="15dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey"
        android:paddingStart="120dp"
        android:paddingTop="200dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Slideshow"
            android:scaleType="fitStart"
            android:src="@drawable/anim_slideshow"
            tools:ignore="ImageContrastCheck" />
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:layout_marginTop="125dp"
        android:background="#FAF8F8"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/editTextTextInstructions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/insturctions"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:background="#FAF8F8"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/editTextTextBreed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/pet_breed"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center"
            android:textColorHighlight="@color/grey"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="#FAF8F8"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout4"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/pet_weight"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHighlight="@color/teal_200"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="#FAF8F8"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPetName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/pet_name"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center"
            android:textColorHighlight="@color/teal_200"
            android:textColorLink="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:importantForAutofill="no" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:onClick="SavaClient"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/Theme.Buttons"
        app:layout_constraintEnd_toStartOf="@+id/buttonViewAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <Button
        android:id="@+id/buttonViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:onClick="ViewAll"
        android:text="@string/btn_VA"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/Theme.Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>